fix weird shadow on firefox

--- a/src/styles/specs.css
+++ b/src/styles/specs.css
@@ -11,9 +11,6 @@
     width: 1.25em;
     text-align: center;
 }
-.specs-merged > .container-main > div, .specs-merged > .container-main > div > .container-section {
-    height: 100%;
-}
 @media only screen and (max-width: 768px) {
     .specs-merged {
         flex-direction: column;
